# practice-mcp-server

./: .env.sample  README.md  pyproject.toml
Les1-check-llm-response/: main.py
Les2-How-to-work-ai-agent/: main-langchain.py  main-langgraph.py  main.py
Les3-Benefit-of-mcp-server/: main.py  mcp-server.py
